# Aetherflow

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN_DECISIONS.md  LICENSE  README.md  SECURITY.md  demo.ps1  demo.sh  run_aetherflow.sh  run_full_test.sh  run_scene_test.ps1  run_scene_test.sh
.aetherflow/templates/: diagnosis.template.json  handoff.template.md  plan.template.md  task_card.template.json  verify_report.template.json
.agents/skills/aetherflow-arch-sync/: SKILL.md
.claude/: settings.json
.claude/agents/: architecture.md  benchmark-reporter.md  code-reviewer.md  debug-verifier.md  encoder.md  scene-runtime.md  trace-verifier.md
.claude/skills/aetherflow-arch-sync/: SKILL.md
.codex/agents/: architecture.toml  benchmark-reporter.toml  code-reviewer.toml  debug-verifier.toml  encoder.toml  scene-runtime.toml  trace-verifier.toml
.github/: copilot-instructions.md
.github/agents/: architecture.md  benchmark-reporter.md  code-reviewer.md  debug-verifier.md  encoder.md  scene-runtime.md  trace-verifier.md
.github/workflows/: build.yml
docs/: BUILD_WINDOWS.md  DOCUMENTATION_INDEX.md  HIGHLIGHTS.md  OPERATION_GUIDE.md
docs/1-status/: PROJECT_STATUS.md
docs/2-agent-system/: AGENT_ARCHITECTURE.md  AGENT_EFFECTIVENESS_LOG.md
docs/3-product/: ARCHITECTURE.md  CODE_COMPONENT_SUMMARY.md  MACOS_AGENT_VERIFICATION.md  PRODUCT_ROADMAP.md
docs/4-qa-debugging/: JUDDER_INVESTIGATION.md  TROUBLESHOOTING_QA.md  VERIFICATION_HISTORY.md
fixtures/: notification_fixture.ps1  password_field_fixture.html  password_field_fixture.ps1
include/AetherFlow/: AsyncAnalyzerBridgeModule.h  Common.h  Config.h  IAIFrameAnalyzer.h  IEncodedFrameSink.h  IH264Encoder.h  MockSlowAnalyzer.h  NotificationProducerModule.h  NvencH264Wrapper.h  NvencRoiDefaults.h  PasswordFieldPrivacyMaskModule.h  PrivacyMaskCompositor.h  ROIGenerator.h  SceneDemoActionModule.h  ScreenCapture.h  VplDefaults.h  VplH264Wrapper.h
include/AetherFlow/ai/: SceneClassifierOnnx.h
include/AetherFlow/app/: PipelineRunner.h
include/AetherFlow/platform/mac/: IPlatformEncoderMac.h  MacosNotificationProducerModule.h  MacosPlatformShim.h  MacosPrivacyMaskCompositor.h  MacosScreenCapture.h  MacosSecureTextFieldPrivacyMaskModule.h
include/AetherFlow/policy/: PolicyDecision.h  PolicyEngine.h
include/AetherFlow/streaming/: AnnexB.h  SrtStreamOutput.h
protocol/: AGENT_CHANGELOG.md  AGENT_COMMANDS.md  AGENT_OPERABLE_ARCHITECTURE.md  AGENT_PROTOCOL.md  COMPONENT_INDEX.md
src/: AsyncAnalyzerBridgeModule.cpp  MockSlowAnalyzer.cpp  NotificationProducerModule.cpp  NvencH264Wrapper.cpp  PasswordFieldPrivacyMaskModule.cpp  PrivacyMaskCompositor.cpp  ROIGenerator.cpp  ScreenCapture.cpp  VplH264Wrapper.cpp  main.cpp
src/ai/: SceneClassifierOnnx.cpp
src/platform/mac/: MacosNotificationProducerModule.mm  MacosPlatformShim.mm  MacosPrivacyMaskCompositor.mm  MacosScreenCapture.mm  MacosSecureTextFieldPrivacyMaskModule.mm  VideoToolboxH264Encoder.mm
src/policy/: PolicyEngine.cpp
src/streaming/: AnnexB.cpp  SrtStreamOutput.cpp
src/ui/: AppConfig.cpp  AppConfig.h  StudioMain.cpp
tests/: test_annexb.cpp  test_appconfig.cpp  test_assert.h  test_frame_decision.cpp  test_policy_engine.cpp
tools/: agent_report.py  agent_run.ps1  agent_run.py  agent_summarize.ps1  agent_summarize.py  agent_verify.ps1  agent_verify.py  bootstrap_windows.ps1  export_clip_zeroshot.py  fetch_ffmpeg.py  fetch_imgui.py  package_portable.py  roi_benchmark.ps1
